Started working on GameServerManager